tests/syntax_error/bad_function_name_after_def.jou
def 69() -> void:  # Error: expected a function name, got an integer
    return
